add the ability to create a tweet for an authenticated user and get one or all tweets for all users
